[gd_scene load_steps=11 format=3 uid="uid://bytqhuq2xb23d"]

[ext_resource type="Script" uid="uid://b47reluksfeil" path="res://Scripts/fox.gd" id="1_6b4yp"]
[ext_resource type="Texture2D" uid="uid://l5hxovax4mc4" path="res://art/fox(base).png" id="2_2g4xt"]
[ext_resource type="Texture2D" uid="uid://dsld8vx1mbghd" path="res://art/fox(base)right.png" id="3_brrv0"]
[ext_resource type="AudioStream" uid="uid://xwiw0hncanjt" path="res://audio/footsteps-in-snow-102043.mp3" id="4_3u0el"]
[ext_resource type="AudioStream" uid="uid://chi0j6bputgtn" path="res://audio/fragment collect sound.mp3" id="5_brrv0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m5q2l"]
size = Vector2(20.0983, 89.7244)

[sub_resource type="AtlasTexture" id="AtlasTexture_2g4xt"]
atlas = ExtResource("2_2g4xt")
region = Rect2(0, 0, 42, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_m5q2l"]
atlas = ExtResource("3_brrv0")
region = Rect2(0, 0, 42, 28)

[sub_resource type="SpriteFrames" id="SpriteFrames_35nom"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2g4xt")
}],
"loop": true,
"name": &"left",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_m5q2l")
}],
"loop": true,
"name": &"right",
"speed": 3.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0ael4"]
size = Vector2(6.37312, 28.7118)

[node name="fox" type="CharacterBody2D" node_paths=PackedStringArray("fragment_collect", "footstep")]
scale = Vector2(0.696577, 0.696577)
collision_layer = 7
collision_mask = 7
script = ExtResource("1_6b4yp")
fragment_collect = NodePath("audio_stuff/fragment_ding")
footstep = NodePath("audio_stuff/footstep")

[node name="fox_collision" type="CollisionShape2D" parent="."]
z_index = 1
position = Vector2(5.74236, 10.0491)
rotation = 1.5708
scale = Vector2(1, 0.32)
shape = SubResource("RectangleShape2D_m5q2l")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
z_index = 1
texture_filter = 1
position = Vector2(5.74236, 10.0491)
scale = Vector2(0.691194, 0.691194)
sprite_frames = SubResource("SpriteFrames_35nom")
animation = &"right"

[node name="player_collision" type="Area2D" parent="."]

[node name="player_collison_shape" type="CollisionShape2D" parent="player_collision"]
position = Vector2(5.74236, 10.0491)
rotation = 1.5708
scale = Vector2(3.1536, 1)
shape = SubResource("RectangleShape2D_0ael4")

[node name="audio_stuff" type="Node2D" parent="."]

[node name="footstep" type="AudioStreamPlayer" parent="audio_stuff"]
stream = ExtResource("4_3u0el")
volume_db = 24.0

[node name="footstep_timer" type="Timer" parent="audio_stuff/footstep"]
wait_time = 0.5
autostart = true

[node name="fragment_ding" type="AudioStreamPlayer" parent="audio_stuff"]
stream = ExtResource("5_brrv0")
pitch_scale = 0.7

[connection signal="area_entered" from="player_collision" to="." method="_on_area_2d_area_entered"]
[connection signal="area_entered" from="player_collision" to="." method="_on_fragment_touched"]
[connection signal="area_entered" from="player_collision" to="." method="_on_runestone_entered"]
[connection signal="timeout" from="audio_stuff/footstep/footstep_timer" to="." method="_on_footstep_timer_timeout"]
